0.13/_sources/api/generated/deepchecks.nlp.checks.data_integrity.PropertyLabelCorrelation.rst.txt

PropertyLabelCorrelation
========================



.. currentmodule:: deepchecks.nlp.checks.data_integrity

.. autoclass:: PropertyLabelCorrelation
   :special-members: __init__







.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   PropertyLabelCorrelation.add_condition
   
   
   PropertyLabelCorrelation.add_condition_property_pps_less_than
   
   
   PropertyLabelCorrelation.clean_conditions
   
   
   PropertyLabelCorrelation.conditions_decision
   
   
   PropertyLabelCorrelation.config
   
   
   PropertyLabelCorrelation.from_config
   
   
   PropertyLabelCorrelation.from_json
   
   
   PropertyLabelCorrelation.metadata
   
   
   PropertyLabelCorrelation.name
   
   
   PropertyLabelCorrelation.params
   
   
   PropertyLabelCorrelation.remove_condition
   
   
   PropertyLabelCorrelation.run
   
   
   PropertyLabelCorrelation.run_logic
   
   
   PropertyLabelCorrelation.to_json
   


















