0.19/_sources/api/generated/deepchecks.nlp.checks.data_integrity.PropertyLabelCorrelation.rst.txt

PropertyLabelCorrelation
========================



.. currentmodule:: deepchecks.nlp.checks.data_integrity

.. autoclass:: PropertyLabelCorrelation
   :special-members: __init__







.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   PropertyLabelCorrelation.add_condition
   
   
   PropertyLabelCorrelation.add_condition_property_pps_less_than
   
   
   PropertyLabelCorrelation.clean_conditions
   
   
   PropertyLabelCorrelation.conditions_decision
   
   
   PropertyLabelCorrelation.config
   
   
   PropertyLabelCorrelation.from_config
   
   
   PropertyLabelCorrelation.from_json
   
   
   PropertyLabelCorrelation.metadata
   
   
   PropertyLabelCorrelation.name
   
   
   PropertyLabelCorrelation.params
   
   
   PropertyLabelCorrelation.remove_condition
   
   
   PropertyLabelCorrelation.run
   
   
   PropertyLabelCorrelation.run_logic
   
   
   PropertyLabelCorrelation.to_json
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /nlp/auto_checks/data_integrity/images/thumb/sphx_glr_plot_property_label_correlation_thumb.png
     :alt: PropertyLabelCorrelation

     :ref:`sphx_glr_nlp_auto_checks_data_integrity_plot_property_label_correlation.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


